<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>uuv_control_utils</name>
  <version>0.5.0</version>
  <description>The uuv_control_utils package</description>

    <author email="loic@liquid-tech.ai">Loïc Mougeolle</author>
    <author email="jean-philip@liquid-tech.ai">Jean-Philip Royer</author>

    <maintainer email="loic@liquid-tech.ai">Loic Mougeolle</maintainer>
    <maintainer email="jean-philip@liquid-tech.ai">Jean-Philip Royer</maintainer>

    <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>uuv_world_ros_plugins_msgs</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>uuv_control_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>uuv_trajectory_control</exec_depend>
  <exec_depend>plankton_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
