<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>uuv_control_utils</name>
  <version>0.6.1</version>
  <description>The uuv_control_utils package</description>

    <maintainer email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</maintainer>
    <maintainer email="loic.mougeolle@naval-group.com">Loïc Mougeolle</maintainer>

    <author email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</author>
    <author email="loic.mougeolle@naval-group.com">Loïc Mougeolle</author>
  
    <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
    <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
    <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

    <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>uuv_world_ros_plugins_msgs</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>uuv_control_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>uuv_trajectory_control</exec_depend>
  <exec_depend>plankton_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
