<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>uuv_thruster_manager</name>
  <version>0.6.13</version>
  <description>The thruster manager package</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  
  <exec_depend>tf2</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>uuv_assistants</exec_depend>

  <!-- TODO finalize migration -->
  <!-- <test_depend>rosunit</test_depend> 
  <test_depend>rostest</test_depend>
  <test_depend>python-numpy</test_depend>
  <test_depend>uuv_assistants</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>joint_state_publisher</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>xacro</test_depend> -->

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
