<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>uuv_thruster_manager</name>
  <version>0.6.1</version>
  <description>The thruster manager package</description>

    <maintainer email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</maintainer>
    <maintainer email="loic.mougeolle@naval-group.com">Loïc Mougeolle</maintainer>

    <author email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</author>
    <author email="loic.mougeolle@naval-group.com">Loïc Mougeolle</author>
  
    <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
    <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
    <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

    <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>uuv_assistants</exec_depend>
  <exec_depend>plankton_utils</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>joint_state_publisher</test_depend>
  <test_depend>python3-numpy</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>uuv_assistants</test_depend> 
  <test_depend>xacro</test_depend>
  
  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
