<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>uuv_gazebo_plugins</name>
  <version>0.6.1</version>
  <description>
    Plankton's Gazebo plugins for simulation of hydrodynamic and hydrostatic
    forces, and underwater actuators (e.g. thrusters and fins).
  </description>

  <maintainer email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</maintainer>
  <maintainer email="loic.mougeolle@naval-group.com">Loïc Mougeolle</maintainer>

  <author email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</author>
  <author email="loic.mougeolle@naval-group.com">Loïc Mougeolle</author>
  
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>protobuf-dev</depend>
  <depend>eigen</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
