<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>uuv_gazebo_ros_plugins</name>
  <version>0.6.1</version>
  <description>
      Plankton's extended ROS plugins for generation of the necessary
      ROS services and topics during the simulation.
  </description>

  <maintainer email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</maintainer>
  <maintainer email="loic.mougeolle@naval-group.com">Loïc Mougeolle</maintainer>

  <author email="jean-philip-a.royer@naval-group.com">Jean-Philip Royer</author>
  <author email="loic.mougeolle@naval-group.com">Loïc Mougeolle</author>
  
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>


  <license>Apache-2.0</license>
  
  
  <depend>gazebo_dev</depend>  
  <depend>geometry_msgs</depend>   
  <depend>rclcpp</depend> 
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>uuv_gazebo_plugins</depend>
  <depend>uuv_gazebo_ros_plugins_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>ament_cmake_pytest</test_depend> 
  <test_depend>xacro</test_depend>
  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
